[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/PlayerStats.gd" type="Script" id=1]
[ext_resource path="res://UI/UItheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/SavedText.png" type="Texture" id=3]
[ext_resource path="res://UI/Fonts/VT323-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 7
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=3]

[node name="PlayerStats" type="Node"]
script = ExtResource( 1 )

[node name="HealTimer" type="Timer" parent="."]
one_shot = true

[node name="StaminaTimer" type="Timer" parent="."]
one_shot = true

[node name="TextTimer" type="Timer" parent="."]
one_shot = true

[node name="AchievementTimer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="Label" type="Button" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -23.5
margin_top = -24.0
margin_right = 23.5
margin_bottom = -4.0
theme = ExtResource( 2 )
icon = ExtResource( 3 )

[node name="Achievement" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -108.0
margin_top = -55.0
margin_right = 108.0
margin_bottom = -2.0
theme = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Error.achievement_body_not_found"
align = 1
valign = 1
autowrap = true

[node name="Title" type="Label" parent="CanvasLayer/Achievement"]
anchor_right = 1.0
margin_top = 2.0
margin_bottom = 11.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "Achievement Recieved!"
align = 1

[node name="Description" type="Label" parent="CanvasLayer/Achievement"]
anchor_top = 0.773
anchor_right = 1.0
anchor_bottom = 0.773
margin_top = -9.969
margin_bottom = 9.031
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "Error.achievement_description_not_found"
align = 1
valign = 2
autowrap = true

[connection signal="timeout" from="HealTimer" to="." method="_on_HealTimer_timeout"]
[connection signal="timeout" from="StaminaTimer" to="." method="_on_StaminaTimer_timeout"]
[connection signal="timeout" from="TextTimer" to="." method="_on_TextTimer_timeout"]
[connection signal="timeout" from="AchievementTimer" to="." method="_on_AchievementTimer_timeout"]
